syntax = "proto3";

package usercenter.api.usercenter.feedback.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "usercenter.api.usercenter.feedback.v1";
option java_outer_classname = "FeedbackV1";

import "api/usercenter/feedback/usercenter_feedback_category.proto";
import "google/api/annotations.proto";
import "api/usercenter/feedback/usercenter_feedback.proto";

service Feedback{

  // ListFeedbackCategory 获取反馈建议分类列表
  rpc ListFeedbackCategory (ListFeedbackCategoryRequest) returns (ListFeedbackCategoryReply) {
    option (google.api.http) = {
      get: "/usercenter/api/v1/feedback_categories",
      additional_bindings:{
        get: "/usercenter/client/v1/feedback_categories",
      }
    };
  }

  // CreateFeedbackCategory 创建反馈建议分类
  rpc CreateFeedbackCategory (CreateFeedbackCategoryRequest) returns (CreateFeedbackCategoryReply) {
    option (google.api.http) = {
      post: "/usercenter/api/v1/feedback_category",
      body: "*"
    };
  }

  // UpdateFeedbackCategory 更新反馈建议分类
  rpc UpdateFeedbackCategory (UpdateFeedbackCategoryRequest) returns (UpdateFeedbackCategoryReply) {
    option (google.api.http) = {
      put: "/usercenter/api/v1/feedback_category",
      body: "*"
    };
  }

  // DeleteFeedbackCategory 删除反馈建议分类
  rpc DeleteFeedbackCategory (DeleteFeedbackCategoryRequest) returns (DeleteFeedbackCategoryReply) {
    option (google.api.http) = {
      delete: "/usercenter/api/v1/feedback_category",
    };
  }

  // ListFeedback 获取反馈建议列表
  rpc ListFeedback (ListFeedbackRequest) returns (ListFeedbackReply) {
    option (google.api.http) = {
      get: "/usercenter/api/v1/feedbacks",
    };
  }

  // CreateFeedback 创建反馈建议
  rpc CreateFeedback (CreateFeedbackRequest) returns (CreateFeedbackReply) {
    option (google.api.http) = {
      post: "/usercenter/client/v1/feedback",
      body: "*"
    };
  }

  // DeleteFeedback 删除反馈建议
  rpc DeleteFeedback (DeleteFeedbackRequest) returns (DeleteFeedbackReply) {
    option (google.api.http) = {
      delete: "/usercenter/api/v1/feedback",
    };
  }

  // UpdateFeedback 更新反馈建议
  rpc UpdateFeedback (UpdateFeedbackRequest) returns (UpdateFeedbackReply) {
    option (google.api.http) = {
      put: "/usercenter/api/v1/feedback",
      body: "*"
    };
  }

}